...
        sets: number;
        reps: number;
        restPeriod: number;
      }>;
    }> = [
      {
        name: 'Push Day',
        summary: 'Chest, Triceps and Shoulders',
        exercises: [
          { name: 'Bench Press', category: ExerciseCategory.Barbell, sets: 3, reps: 6, restPeriod: 60 },
          { name: 'Overhead Press', category: ExerciseCategory.Barbell, sets: 3, reps: 8, restPeriod: 60 },
          { name: 'Incline Bench Press', category: ExerciseCategory.Dumbbell, sets: 3, reps: 10, restPeriod: 60 },
          { name: 'Lateral Raise', category: ExerciseCategory.Dumbbell, sets: 3, reps: 12, restPeriod: 60 },
...
